--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,13 @@
 name: simplot
 version: 0.1.0
 author: Richard Griffith (scribe.griff@gmail.com)
-description: A library for plotting two dimensional (2D), list based, data structure to an HTML canvas.
+description: A library for plotting two dimensional (2D), list based, data structures to an HTML canvas.
 homepage: https://github.com/scribeGriff/simplot
+documentation: http://scribeGriff.github.io/docs/simplot
 environment:
-  sdk: '>=0.5.3'
+  sdk: '>=0.5.9'
 dev_dependencies:
   browser: any
   convolab:
     git: git://github.com/scribeGriff/ConvoLab.git
   unittest: any
-
-#dependencies:
-#  js: any
-#  unittest: any
