--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: simplot
-version: 0.1.1
+version: 0.2.0
 author: Richard Griffith (scribe.griff@gmail.com)
 description: A library for plotting two dimensional (2D), list based, data structures to an HTML canvas.
 homepage: https://github.com/scribeGriff/simplot
 documentation: http://scribeGriff.github.io/docs/simplot
 environment:
-  sdk: '>=0.7.6'
+  sdk: ">=0.8.10+6 <2.0.0"
 dev_dependencies:
-  browser: any
+  browser: ">=0.9.0 < 0.10.0"
   convolab:
     git: git://github.com/scribeGriff/ConvoLab.git
-  hop: any
-  unittest: any
+  hop: 0.27.1
+  unittest: ">=0.9.0 < 0.10.0"
