--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,10 @@ description: A library for plotting two dimensional (2D), list based, data struc
 homepage: https://github.com/scribeGriff/simplot
 documentation: http://scribeGriff.github.io/docs/simplot
 environment:
-  sdk: ">=0.8.10+6 <2.0.0"
+  sdk: '>=0.8.10+6 <2.0.0'
 dev_dependencies:
-  browser: ">=0.9.0 < 0.10.0"
+  browser: '>=0.9.0 < 0.10.0'
   convolab:
     git: git://github.com/scribeGriff/ConvoLab.git
-  hop: 0.27.1
-  unittest: ">=0.9.0 < 0.10.0"
+  hop: '>=0.27.0'
+  unittest: '>=0.9.0 < 0.10.0'
